Add test suite, fix MP3 export, and preserve paper headers in extraction
- Add pytest test suite: chunking, helpers, extraction, and slow pipeline
  tests; add pytest.ini with slow marker (Kokoro tests skipped by default)
- Add tests/fixtures/toydata.tex toy academic paper for fixture generation
- Fix MP3 export to use in-memory BytesIO buffer instead of a temp file;
  auto-discover ffmpeg inside conda envs on Windows
- Fix _remove_short_runs to always keep the first short run so paper
  title/author headers are not incorrectly filtered as table fragments
- Update .gitignore to cover __pycache__ broadly and compiled fixture files
- Update README with test instructions and module structure for tests/
- Add pytest to requirements.txt
- Update run.py to use the toydata fixture for quick local smoke-testing

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-/pdf_to_speech/__pycache__
+__pycache__/
+tests/fixtures/toydata.pdf
+tests/fixtures/toydata.aux
+tests/fixtures/toydata.log
+tests/fixtures/toydata.out
